# SysY2022-Compiler-llvm

./: .gitignore  CMakeLists.txt  README.md  auto_build.py  run_single_test.py  run_tests.py  sylib.c  test.in  test.out  test.s  web_ui.py
include/: Ast.h  IrBuilder.h  SymbolTable.h  Type.h
src/: Ast.cpp  IrBuilder.cpp  SymbolTable.cpp  Type.cpp  main.cpp  sysy.l  sysy.y
templates/: index.html
tests_fuctional_2/: 04_break_continue.s  16_k_smallest.sy  17_maximal_clique.sy  21_union_find.sy  26_scope4.s  26_scope4.sy  28_side_effect2.sy  30_many_dimensions.sy  31_many_indirections.sy
tests_performance_1/: 2025-05H-55.out  2025-05H-55.sy  2025-0XT-12.out  2025-18P-6.out  2025-1FB-63.out  2025-1NE-37.in  2025-1NE-37.out  2025-236-50.in  2025-236-50.out  2025-2EI-3.out  2025-3F1-17.in  2025-3F1-17.out  2025-3P7-60.out  2025-3ZC-30.in  2025-67P-14.in  2025-67P-14.sy  2025-6U4-15.out  2025-6U4-15.sy  2025-7NA-21.in  2025-7NA-21.out  2025-7VF-16.out  2025-8AD-57.in  2025-8AD-57.out  2025-8TM-53.in  2025-8TM-53.out  2025-974-19.in  2025-974-19.out  2025-974-19.sy  2025-A62-49.out  2025-ALU-23.in  2025-ALU-23.out  2025-ALU-23.sy  2025-BTH-42.in  2025-C19-31.out  2025-CNI-38.in  2025-CNI-38.out  2025-CPS-39.in  2025-CPS-39.out  2025-CRC-20.in  2025-CRC-20.out  (+76 more)
tests_performance_2/: 01_mm1.in  01_mm1.out  01_mm2.out  01_mm3.in  01_mm3.out  03_sort3.out  04_spmv1.out  04_spmv1.sy  04_spmv2.in  04_spmv2.out  04_spmv3.out  04_spmv3.sy  crypto-1.in  crypto-1.out  crypto-2.out  crypto-3.out  fft0.in  fft2.in  gameoflife-gosper.in  gameoflife-gosper.out  gameoflife-oscillator.in  gameoflife-oscillator.out  gameoflife-p61glidergun.in  gameoflife-p61glidergun.out  h-1-02.out  h-1-03.out  h-1-03.sy  h-10-01.sy  (+55 more)
